# mgnify-extract

./: .gitignore  README.md  index.html  mgnifyextract.html  pyproject.toml  requirements.txt  search.js  setup.cfg  test.py
.github/workflows/: docs.yml
mgnifyextract/: __init__.py  __main__.py  analyses.html  analyses.py  downloads.html  downloads.py  dwc.html  dwc.py  runs.html  runs.py  samples.html  samples.py  silva.html  silva.py  studies.html  studies.py  util.html  util.py
notebooks/: gbif_taxonomy.ipynb  otus.html  otus.ipynb  worms.ipynb
scripts/: develop.py
test/: test_analyses.py  test_runs.py  test_studies.py
