[metadata]
name = mgnify-extract
version = 0.0.2
author = Pieter Provoost
author_email = pieterprovoost@gmail.com
license = MIT
description = This library extracts Darwin Core datasets from MGnify
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iobis/mgnify-extract
project_urls =
    Bug Tracker = https://github.com/iobis/mgnify-extract/issues
    repository = https://github.com/iobis/mgnify-extract

[options]
packages = mgnifyextract
install_requires =
    requests
